--- a/F8/package.json
+++ b/F8/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "node-sass": "^4.14.1",
+    "overlayscrollbars": "^1.10.0",
     "overlayscrollbars-react": "^0.2.3",
     "prismjs": "^1.25.0",
     "query-string": "^7.0.1",
@@ -40,9 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.0"
-  }
+  "devDependencies": {}
 }
